--- a/index.html
+++ b/index.html
@@ -76,9 +76,19 @@
 
 <section class="mbr-section mbr-section-nopadding mbr-figure--caption-outside-bottom" id="image1-a2" data-rv-view="39">
     <div class="mbr-figure">
-        <div><img src="assets/images/fixxfacecom-skincare-42-62-1587-2343-1400x2067-2-1400x2067.png"></div>
+        <img src="assets/images/fixxfacecom-skincare-42-62-1587-2343-1400x2067-2-1400x2067.png" usemap="#heartmap" style="max-width:100%; height:auto;">
+
         
     </div>
+    <map name="heartmap">
+        <area shape="circle" coords="690,360,40" href="welcometofixxface.html" alt="fixxface" target="_blank">
+        <area shape="circle" coords="690,530,40" href="page47.html" alt="technology beauty" target="_blank">
+        <area shape="circle" coords="690,700,40" href="page56.html" alt="basic skincare" target="_blank">
+        <area shape="circle" coords="690,880,40" href="page20.html" alt="eyelash" target="_blank">
+        <area shape="circle" coords="690,1050,40" href="page52.html" alt="brow lift" target="_blank">
+        <area shape="circle" coords="690,1230,40" href="page44.html" alt="1-day class" target="_blank">
+      </map>
+      
 </section>
 
 <section class="mbr-section mbr-section__container article" id="header3-gi" data-rv-view="41" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
