--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 
 </section>
 
-<section class="mbr-section mbr-section-nopadding" id="image1-a2" data-rv-view="39" style="position: relative;">
-    <div class="mbr-figure">
+<section class="mbr-section mbr-section-nopadding" id="image1-a2" data-rv-view="39">
+    <div class="mbr-figure" style="position: relative;">
       <img src="assets/images/fixxfacecom-skincare-42-62-1587-2343-1400x2067-2-1400x2067.png" style="width: 100%; height: auto;">
       
       <!-- 點擊區塊 -->
