--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     
     .heart-link:hover {
       background-color: rgba(255, 105, 180, 0.2); /* 淡粉紅 hover 效果 */
+      content: "❤";
       border: 2px solid hotpink;
     }
     </style>
@@ -90,15 +91,16 @@
     <div class="mbr-figure" style="position: relative;">
       <img src="assets/images/fixxfacecom-skincare-42-62-1587-2343-1400x2067-2-1400x2067.png" style="width: 100%; height: auto;">
       
-      <!-- 點擊區塊 -->
-      <a href="welcometofixxface.html" target="_blank" class="heart-link" style="top: 16%; left: 48%;"></a>
-      <a href="page47.html" target="_blank" class="heart-link" style="top: 24%; left: 48%;"></a>
-      <a href="page56.html" target="_blank" class="heart-link" style="top: 33%; left: 48%;"></a>
-      <a href="page20.html" target="_blank" class="heart-link" style="top: 41.5%; left: 48%;"></a>
-      <a href="page52.html" target="_blank" class="heart-link" style="top: 50%; left: 48%;"></a>
-      <a href="page44.html" target="_blank" class="heart-link" style="top: 58.5%; left: 48%;"></a>
+      <!-- 精準點擊愛心區塊 -->
+      <a href="welcometofixxface.html" target="_blank" class="heart-link" style="top: 59.7%; left: 32.3%;"></a>
+      <a href="page47.html" target="_blank" class="heart-link" style="top: 66.9%; left: 43.5%;"></a>
+      <a href="page56.html" target="_blank" class="heart-link" style="top: 72.7%; left: 49.4%;"></a>
+      <a href="page20.html" target="_blank" class="heart-link" style="top: 80.5%; left: 55.1%;"></a>
+      <a href="page52.html" target="_blank" class="heart-link" style="top: 85.6%; left: 57.0%;"></a>
+      <a href="page44.html" target="_blank" class="heart-link" style="top: 91.3%; left: 58.8%;"></a>
     </div>
   </section>
+  
   
 
 <section class="mbr-section mbr-section__container article" id="header3-gi" data-rv-view="41" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
